# deformops

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
environments/: micromamba-patch.sh  micromamba.nix  oci-prefetch.sh  oci-search.sh  oci.nix  py313cu128.yaml  py313cu129.yaml  uv.nix
sources/deformops/: __init__.py  __init__.pyi  version.py
sources/deformops/nn/: __init__.py  _sanitize.py  conv.py  msda.py
